# qt_copydlls_pimpl_

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  myApp_main.cxx  myCustomWidget.cxx  myCustomWidget.h  myMainWindow.cxx  myMainWindow.h
src/logger/: cout_logger.cxx  cout_logger.h  logger.h  use_cout_logger.cxx  use_widget_logger.cxx  widget_logger.cxx  widget_logger.h
